--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: flask-app
+  name: flask-app-deployment
 spec:
   replicas: 2
   selector:
@@ -13,7 +13,17 @@ spec:
         app: flask-app
     spec:
       containers:
-      - name: flask-app
-        image: docker.io/atuljkamble/the-docker-project:latest
-        ports:
-        - containerPort: 5000
+        - name: flask-app
+          image: apurva2911/flask-app:latest # Docker image pushed from Jenkins
+          ports:
+            - containerPort: 5000
+          resources:
+            limits:
+              memory: "256Mi"
+              cpu: "250m"
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 5000
+            initialDelaySeconds: 10
+            periodSeconds: 10
